# pinako-mcp

./: .gitignore  LICENSE  README.md  host.js  install.js  installer-plan.md  package-lock.json  package.json
installer/: package-lock.json  package.json
installer/src/: index.html  wizard.js
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/capabilities/: default.json
installer/src-tauri/src/: main.rs
setup/: build.js  configure.js  detect.js  main.js  native-host.js  paths.js
