[package]
name = "pinako-installer"
version = "1.2.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri      = { version = "2", features = [] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
dirs       = "5"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
